--- a/template.epub/OEBPS/Styles/epub.css
+++ b/template.epub/OEBPS/Styles/epub.css
@@ -164,11 +164,12 @@ hr.footnotes { width: 15%; text-align: left; margin-right: auto; margin-left: 0;
 .form { font-weight: bold; }
 div.l dfn.gloss { display: block; padding: 5px 5px 5px 5px; border-radius: 10px; line-height: 110%; text-align: left; float: right; margin-left: 25em; width: 250px; font-size: small; background-color: #F3F3F3; text-indent: 0; }
 p dfn.gloss , div.gloss { padding: 5px 5px 5px 5px; border-radius: 10px; line-height: 110%; text-align: left; font-size: small; background-color: #F3F3F3; text-indent: 0; }
-div.l { } /* Kobo, line-height bof */
+div.l { }
 div.l.center { padding-left: 0; }
 /*
 .l.part-M { margin-left: 3em; text-indent: 0; padding-left: 0; }
 .l.part-F { margin-left: 6em; text-indent: 0; padding-left: 0;  }
+.l.part-Y { text-indent: 3em; }
 */
 .lb { color: grey; font-size: 85%; }
 p.label, div.label { margin: 0.7em 0; line-height: 110%; text-align: center; text-indent: 0; orphans: 0; }
@@ -187,7 +188,6 @@ a.noteref:hover, a.noteback:hover { text-decoration: none; border-bottom: solid 
 a.noteback { font-size: 85%; padding-right: 1em; font-weight: bold; }
 .num { font-family: inherit; line-height: 100%; font-variant: small-caps; }
 .num sup { font-variant: normal; font-family: inherit; }
-div.part-Y { text-indent: 3em; }
 div.salute, p.salute { margin: 1em 0 1em 4em; text-indent: 0em; font-style: italic; text-align: right; }
 .letter .salute { text-align: left; font-style: inherit; }
 .signed { margin-top: 1em; margin-bottom: 2em; text-indent: 0; text-align: right; }
