--- a/template-epub/OEBPS/Styles/epub.css
+++ b/template-epub/OEBPS/Styles/epub.css
@@ -110,9 +110,9 @@ samp { font-family: inherit; font-style: italic; }
 section { clear: both; }
 select { padding: 0 0.5ex; }
 small { font-weight: normal; }
-sup, sub { font-variant: normal; line-height: 5%; font-size: 70%; }
-sup { vertical-align: text-top; }
-sub { vertical-align: text-bottom; }
+sup, sub { font-variant: normal; line-height: 5%; font-size: 65%; }
+sup { vertical-align: super; }
+sub { vertical-align: sub; }
 textarea { width: 100%; height: 20em; display: block; }
 table a { border: none; }
 table a:hover { border-width: 0; }
@@ -144,9 +144,8 @@ h1.collection { text-transform: uppercase; }
 section.div { padding-top: 3em; }
 h1.desc { font-weight: normal; padding: 0; margin: 0; font-size: 117%; } /* <titlePart type="desc"> */
 /* .body > .div { border-bottom: 1px #CCCCCC solid; padding-bottom: 3em; } */
-div.docAuthor { text-align: center; font-size: 150%; font-variant: small-caps; }
-div.docDate { text-align: center;}
-div.docImprint { text-align: center; }
+.docAuthor { font-size: 150%; font-variant: small-caps; }
+.docAuthor, .docDate, .docImprint, .performance { text-align: center; margin-left: auto; margin-right: auto; margin-top: 1em; margin-bottom: 1em; }
 .editionStmt {  }
 .entry > * { margin-left: 2em; }
 .entry > .form { margin-left: 0; }
@@ -262,7 +261,7 @@ ul.menu { font-size: 85%; line-height: 95%; }
 div.ornament { line-height: 95%; letter-spacing: 0.6em; margin: 1em 5em; text-align: center;  margin-left: auto; margin-right: auto; }
 .page-break-before { page-break-before: always; height: 2em; height: 2rem; }
 .page-spacer { margin-top: 6em; height: 5em; border-top: 1px #CCCCCC solid; }
-div.privilege { page-break-before: always; }
+div.privilege, div.preface { page-break-before: always; }
 .right { text-align: right; }
 p.right { margin-bottom: 1em; }
 div.right { margin-left: 25%; }
